--- a/main.html
+++ b/main.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="game.js" type="module"></script>
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="game.js" type="module"></script>
+</head>
+
+<body>
+    <nav>
+        <h1 class="display-1">Rat Race II</h1>
+    </nav>
     <section>
         <style>
-            body{
+            body {
                 text-align: center;
             }
+
             canvas {
                 background-color: aqua;
             }
@@ -19,9 +30,10 @@
         <canvas id="canvas" width="512" height="512">
         </canvas>
         <section>
-            <p id="level">Level: 1</p>
+            <p class='lead' id="level">Level: 1</p>
             <p id="playerTime"></p>
         </section>
     </section>
-    </body>
+</body>
+
 </html>
