introduced additonal js game to work alongside original maze game.

--- a/main.html
+++ b/main.html
@@ -33,6 +33,11 @@
             <p class='lead' id="level">Level: 1</p>
             <p id="playerTime"></p>
         </section>
+        <section id="gameList">
+            <ul>
+                <li>Click here for our other game!</li>
+            </ul>
+        </section>
     </section>
 </body>
 
