second game: player movement and canvas boundaries

--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
         <canvas id="canvas" width="512" height="512">
         </canvas>
         <section>
-            <p class='lead' id="level">Level: 1</p>
+            <p class='lead' id="level"></p>
             <p id="playerTime"></p>
         </section>
         <section id="gameList">
