enemy movement fixes: still work to be done enemy speed is not uniform

--- a/main.html
+++ b/main.html
@@ -38,6 +38,10 @@
                 <li>Click here for our other game!</li>
             </ul>
         </section>
+        <section id="makeEnemiesMove">
+            <p>click here to make enemies move</p>
+        </section>
+        <section id='pause'>click to pause animation</section>
     </section>
 </body>
 
