better bullets! bullets travel based on wasd input

--- a/main.html
+++ b/main.html
@@ -42,6 +42,9 @@
             <p>click here to make enemies move</p>
         </section>
         <section id='pause'>click to pause animation</section>
+        <section>
+            <p id="wasd"></p>
+        </section>
     </section>
 </body>
 
