still trying to switch between games seamlessly. Maybe using classes can help fix this

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav>
-        <h1 class="display-1">Rat Race II</h1>
+        <h1 id="gameTitle" class="display-1"></h1>
     </nav>
     <section>
         <style>
@@ -35,7 +35,8 @@
         </section>
         <section id="gameList">
             <ul>
-                <li>Click here for our other game!</li>
+                <li id="ratShooterIII">Click here to play RatShooter III!</li>
+                <li id="ratRaceII">Click here to play ratRaceII!</li>
             </ul>
         </section>
         <section id="makeEnemiesMove">
